Banner area conclued

--- a/index.html
+++ b/index.html
@@ -17,18 +17,50 @@
                 <nav>
                     <ul>
                         <li class="active"><a href="">HOME</a></li>
-                        <li><a href="">HOME</a></li>
-                        <li><a href="">HOME</a></li>
-                        <li><a href="">HOME</a></li>
-                        <li><a href="">HOME</a></li>
-                        <li><a href="">HOME</a></li>
+                        <li><a href="">BLOG</a></li>
+                        <li><a href="">PAGES</a></li>
+                        <li><a href="">DEPARTMENS</a></li>
+                        <li><a href="">TIMETABLE</a></li>
+                        <li><a href="">GALLERY</a></li>
+                        <li><a href="">CONTACT</a></li>
                     </ul>
                 </nav>
             </div>
         </div>
     </header>
     <section id="banner">
-
+        <div class="container column">
+            <div class="banner_headline">
+                <h1>Top notch experience</h1>
+                <h2>Medicenter is a resposive template perfect for all screen sizes</h2>
+            </div>
+            <div class="banner_options">
+                <div class="banner1">
+                    <div class="banner_title">Emergency Case</div>
+                    <div class="banner_desc">If you need a doctor urgently outside of medicenter opening hours, call emergency appointment number for emergency service.</div>
+                    <a href="">Read more</a>
+                </div>
+                <div class="banner2">
+                    <div class="banner_title">Doctors Timetable</div>
+                    <div class="banner_desc">Here at medicenter we have individual doctor's lists. Click rea more below to see services and current timetable for our doctors.</div>
+                    <a href="">Read more</a>
+                </div>
+                <div class="banner3">
+                    <div class="banner_title">Opening Hours</div>
+                    <div class="day_hour1">
+                        <div class="day">Monday - Friday</div>
+                        <div class="hour">8h00 - 17h00</div>
+                    </div>
+                    <div class="day_hour2">
+                        <div class="day">Saturday</div>
+                        <div class="hour">9h30 - 17h30</div>
+                    </div>
+                    <div class="day_hour3">
+                        <div class="day">Sunday</div>
+                        <div class="hour">9h30 - 15h00</div>
+                    </div>
+            </div>
+        </div>
     </section>
 </body>
 </html>
