--- a/index.html
+++ b/index.html
@@ -59,7 +59,65 @@
                         <div class="day">Sunday</div>
                         <div class="hour">9h30 - 15h00</div>
                     </div>
+                </div>
             </div>
+        </div>
+    </section>
+    <section id="geral">
+        <div class="container">
+            <section>
+                <div class="widget">
+                    <div class="widget_title">
+                        <div class="widget_title_text">Latest News</div>
+                        <div class="widget_title_bar"></div>
+                    </div>
+                    <div class="widget_body">
+                        ...
+                    </div>
+                </div>
+            </section>
+            <aside>
+                <div class="widget">
+                    <div class="widget_title">
+                        <div class="widget_title_text">Departments</div>
+                        <div class="widget_title_bar"></div>
+                    </div>
+                    <div class="widget_body">
+                        <div class="widget_content">
+                            <div class="widget1"></div>
+                            <div class="widget1"></div>
+                        </div>
+                        <div class="widget_content">
+                            <div class="widget1"></div>
+                            <div class="widget1"></div>
+                        </div>
+                        <div class="widget_content">
+                            <div class="widget1"></div>
+                            <div class="widget1"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="widget">
+                    <div class="widget_title">
+                        <div class="widget_title_text">Make An Appointment</div>
+                        <div class="widget_title_bar"></div>
+                    </div>
+                    <div class="widget_body">
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                        <div class="contact">
+                            <div class="phone">
+                                <div class="num">☎   <span>by phone: </span>1-800-643-4300</div>
+                            </div>
+                            <div class="email">
+                                <div class="mail">✉   <span>by email: </span><a href="">medicenter@mail.com</a></div>
+                            </div>
+                            <div class="formulario">
+                                <div class="form">📃   or <a href="">fill in the form</a> on our contact page</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </aside>
         </div>
     </section>
 </body>
