footer no finished

--- a/index.html
+++ b/index.html
@@ -180,5 +180,76 @@
             </aside>
         </div>
     </section>
+    <footer>
+        <div class="container flexColumn">
+            <div class="footer_menu">
+                <div class="fm_1">
+                    <a href="">
+                        <h1>Health Insurance</h1>
+                        <p>Here in medicenter we have individual -></p>
+                    </a>
+                </div>
+                <div class="fm_2">
+                    <a href="">
+                        <h1>Medical Records</h1>
+                        <p>Here in medicenter we have individual -></p>
+                    </a>
+                </div>
+                <div class="fm_3">
+                    <a href="">
+                        <h1>Online Bills</h1>
+                        <p>Here in medicenter we have individual -></p>
+                    </a>
+                </div>
+            </div>
+            <div class="footer_area">
+                <div class="footer_areaitem">
+                    <div class="widget">
+                        <div class="widget_title">
+                            <div class="widget_title_text">Medicenter Clinic</div>
+                            <div class="widget_title_bar"></div>
+                        </div>
+                        <div class="widget_body">
+                            <div class="subtitle">Marus adipiscing mauris fringilla turpis interdum sed pulvinar nisi malesuada individual.</div>
+                            <div>Medicenter Clinic</div>
+                            <div class="informations">
+                                <div class="inf_street">
+                                    33 Farlane Street
+                                </div>
+                                <div class="inf_num">
+                                    +123 655 655
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="footer_areaitem">
+                    <div class="widget">
+                        <div class="widget_title">
+                            <div class="widget_title_text">Latest Post</div>
+                            <div class="widget_title_bar"></div>
+                        </div>
+                        <div class="widget_body">
+                            ...
+                        </div>
+                    </div>
+                </div>
+                <div class="footer_areaitem">
+                    <div class="widget">
+                        <div class="widget_title">
+                            <div class="widget_title_text">Latest Tweets</div>
+                            <div class="widget_title_bar"></div>
+                        </div>
+                        <div class="widget_body">
+                            ...
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="footer_copy">
+                Copyright - Todos os direitos reservados
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
