--- a/index.html
+++ b/index.html
@@ -186,19 +186,19 @@
                 <div class="fm_1">
                     <a href="">
                         <h1>Health Insurance</h1>
-                        <p>Here in medicenter we have individual -></p>
+                        <p>Here in medicenter we have individual ⇢</p>
                     </a>
                 </div>
                 <div class="fm_2">
                     <a href="">
                         <h1>Medical Records</h1>
-                        <p>Here in medicenter we have individual -></p>
+                        <p>Here in medicenter we have individual ⇢</p>
                     </a>
                 </div>
                 <div class="fm_3">
                     <a href="">
                         <h1>Online Bills</h1>
-                        <p>Here in medicenter we have individual -></p>
+                        <p>Here in medicenter we have individual ⇢</p>
                     </a>
                 </div>
             </div>
@@ -210,14 +210,32 @@
                             <div class="widget_title_bar"></div>
                         </div>
                         <div class="widget_body">
-                            <div class="subtitle">Marus adipiscing mauris fringilla turpis interdum sed pulvinar nisi malesuada individual.</div>
-                            <div>Medicenter Clinic</div>
-                            <div class="informations">
-                                <div class="inf_street">
-                                    33 Farlane Street
+                            <div class="foot_contact">
+                                <div class="subtitle">Marus adipiscing mauris fringilla turpis interdum sed pulvinar nisi malesuada individual.</div>
+                                <div>Medicenter Clinic</div>
+                                <div class="informations">
+                                    <div class="inf_street">
+                                        33 Farlane Street
+                                    </div>
+                                    <div class="inf_num">
+                                        +123 655 655
+                                    </div>
                                 </div>
-                                <div class="inf_num">
-                                    +123 655 655
+                                <div class="informations">
+                                    <div class="inf_street">
+                                        Keilor East
+                                    </div>
+                                    <div class="inf_num">
+                                        +123 755 755
+                                    </div>
+                                </div>
+                                <div class="informations">
+                                    <div class="inf_street">
+                                        VIC 3033, Australia
+                                    </div>
+                                    <div class="email">
+                                        <a href="">medicenter@mail.com</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -230,7 +248,26 @@
                             <div class="widget_title_bar"></div>
                         </div>
                         <div class="widget_body">
-                            ...
+                            <div class="latest_post">
+                                <div class="content_latest_post">
+                                    <a href="">
+                                        ⇢ Marus adispicing mauris fringilla turpis interdum sed pulvinar nisi malesuada.
+                                        <p>6 years ago</p>
+                                    </a>
+                                </div>
+                                <div class="content_latest_post">
+                                    <a href="">
+                                        ⇢ Lorem ipsum dolor sit amat velum.
+                                        <p>6 years ago</p>
+                                    </a>
+                                </div>
+                                <div class="content_latest_post">
+                                    <a href="">
+                                        ⇢ Marus adispicing mauris fringilla turpis interdum sed pulvinar nisi malesuada.
+                                        <p>6 years ago</p>
+                                    </a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -241,7 +278,29 @@
                             <div class="widget_title_bar"></div>
                         </div>
                         <div class="widget_body">
-                            ...
+                            <div class="latest_tweets">
+                                <div class="seta">
+                                    ⇢
+                                    <div class="content_latest_tweets">
+                                        We've released new version #Cleaning Company #Responsible #Schedule... <a href="">t.co/UkTeho</a>
+                                        <p>6 years ago</p>
+                                    </div>
+                                </div>
+                                <div class="seta">
+                                    ⇢
+                                    <div class="content_latest_tweets">
+                                        We've released new version #Cleaning Company #Responsible #Schedule... <a href="">t.co/UkTeho</a>
+                                        <p>6 years ago</p>
+                                    </div>
+                                </div>
+                                <div class="seta">
+                                    ⇢
+                                    <div class="content_latest_tweets">
+                                        We've released new version #Cleaning Company #Responsible #Schedule... <a href="">t.co/UkTeho</a>
+                                        <p>6 years ago</p>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
