--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./assets/css/template.css">
 </head>
 <body>
+    <script src="assets/js/script.js"></script>
     <header>
         <div class="container">
             <div class="logo">
